<resources>
    <string name="app_name">S-Money</string>
    <string name="login">Iniciar Sesión</string>
    <string name="nickname">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="singin">Entrar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="ingresos">Ingresos</string>
    <string name="gastos">Gastos</string>
    <string name="saldo">Saldo</string>
    <string name="botonflotante">botonFlotante</string>
    <string name="btn">btn</string>
    <string name="tran">Detalles de las transacciones</string>
    <string name="num">Número de transacciones</string>
    <string name="cant">Cantidad total de ingresos</string>
    <string name="cantg">Cantidad total de gastos</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>

    <string name="todo">TODO</string>
    <string name="title_activity_tabs">Tabs</string>
    <string name="tab_text_1">Ingresos</string>
    <string name="tab_text_2">Gastos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>